--- a/Day10_Js/OnlineExam.html
+++ b/Day10_Js/OnlineExam.html
@@ -118,7 +118,7 @@
                   <label id="Option3">4th Option</label><br />
                   <br />
                   <br />
-                  <input type="button" value="Next" onclick="NextQuestion()" />
+                  <input type="button" value="next" onclick="NextQuestion()" />
               </form>
     </div>
 </body>
